Квиз без последнего слайда

--- a/Interior Design/css/style.css
+++ b/Interior Design/css/style.css
@@ -2262,43 +2262,12 @@ h6 {
 .content-price-form__select-label {
   font-size: calc(10px + 2 * ((100vw - 320px) / 1600));
   padding-bottom: 10px;
+  margin-right: 20px;
 }
 
 .content-price-form__select {
   margin-bottom: 35px;
   padding-right: 15px;
-}
-
-.content-price-form__range {
-  font-size: calc(14px + 2 * ((100vw - 320px) / 1600));
-  min-width: 200px;
-}
-
-.content-price-form__range-input {
-  max-width: 80px;
-  margin-right: 15px;
-  max-height: 42px;
-  margin-bottom: 0;
-}
-
-.range-label {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
-  margin-bottom: 20px;
-}
-
-.range-info {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-pack: justify;
-      -ms-flex-pack: justify;
-          justify-content: space-between;
-  margin-bottom: 10px;
 }
 
 .content-price-form__input {
@@ -2351,11 +2320,17 @@ h6 {
   -webkit-box-flex: 1;
       -ms-flex: 1 1 auto;
           flex: 1 1 auto;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
 }
 
 .present-item-left__number-question {
   display: block;
-  margin: auto;
   text-align: center;
   padding-bottom: 15px;
   font-family: Philosopher;
@@ -2382,13 +2357,35 @@ h6 {
   background: #F2F2F2;
   border-radius: 2px;
   margin-right: 10px;
+  position: relative;
 }
 
 .present-item-left__li:last-child {
   margin: 0px 0px 0px 0px;
 }
 
-.present-item-left__li_active {
+.present-item-left__li:after {
+  content: '';
+  display: block;
+  width: 0%;
+  height: 100%;
+  position: absolute;
+  -webkit-transition: 1s;
+  -o-transition: 1s;
+  transition: 1s;
+  background: -webkit-gradient(linear, left top, right top, from(#BFA874), color-stop(52.08%, #EED9AB), to(#BFA874));
+  background: -o-linear-gradient(left, #BFA874 0%, #EED9AB 52.08%, #BFA874 100%);
+  background: linear-gradient(90deg, #BFA874 0%, #EED9AB 52.08%, #BFA874 100%);
+}
+
+.present-item-left__li_active:after {
+  content: '';
+  display: block;
+  width: 100%;
+  height: 100%;
+  -webkit-transition: 1s;
+  -o-transition: 1s;
+  transition: 1s;
   background: -webkit-gradient(linear, left top, right top, from(#BFA874), color-stop(52.08%, #EED9AB), to(#BFA874));
   background: -o-linear-gradient(left, #BFA874 0%, #EED9AB 52.08%, #BFA874 100%);
   background: linear-gradient(90deg, #BFA874 0%, #EED9AB 52.08%, #BFA874 100%);
@@ -2396,10 +2393,9 @@ h6 {
 
 .present-item-left__body {
   padding-bottom: 15px;
-}
-
-.content-present {
-  max-width: 800px;
+  -webkit-box-flex: 1;
+      -ms-flex: 1 1 auto;
+          flex: 1 1 auto;
 }
 
 .content-present__title {
@@ -2442,10 +2438,6 @@ h6 {
           transform: translateY(0%);
 }
 
-.content-present_option.active span {
-  border-bottom: 1px solid #B99C5D;
-}
-
 .content-present__img {
   min-width: 245px;
   min-height: 133px;
@@ -2457,6 +2449,15 @@ h6 {
 
 .content-present__img img {
   width: 100%;
+}
+
+.options_2 .content-present_option:before {
+  border-radius: 0%;
+}
+
+.options_2 .content-present_option.active:before {
+  border: 1px solid transparent;
+  background: url("../img/presents/active-input.svg") center/contain no-repeat;
 }
 
 .present-item-left__buttons {
@@ -2493,15 +2494,30 @@ h6 {
 
 .present-item-right {
   position: relative;
-  min-height: 550px;
+  min-height: 595px;
   -webkit-box-flex: 0;
-      -ms-flex: 0 0 390px;
-          flex: 0 0 390px;
+      -ms-flex: 0 0 350px;
+          flex: 0 0 350px;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
 }
 
 .present-item-right__body {
-  left: 0;
-  right: 0;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  width: 100%;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
   padding: 35px 30px;
   background: url("../img/presents/bg-right.png") center/100% 100% no-repeat;
 }
@@ -2580,6 +2596,229 @@ h6 {
   top: 0;
 }
 
+.range_2 {
+  max-width: 560px;
+  z-index: 5;
+  position: relative;
+}
+
+.range_3 {
+  position: relative;
+  z-index: 5;
+  max-width: 560px;
+}
+
+.present-slide-3__img {
+  position: absolute;
+  right: 12%;
+  width: 38%;
+}
+
+.row_4 {
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+}
+
+.content-present_item-4 {
+  -webkit-box-flex: 0;
+      -ms-flex: 0 1 22%;
+          flex: 0 1 22%;
+  padding-top: 30px;
+  -webkit-box-align: start;
+      -ms-flex-align: start;
+          align-items: flex-start;
+  position: relative;
+  margin: 0px 10px;
+  min-width: 160px;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+}
+
+.content-present-item-4__img {
+  border-radius: 5px;
+  overflow: hidden;
+}
+
+.content-present-item-4__img img {
+  max-width: 100%;
+}
+
+.content-present-item-4__description {
+  font-size: calc(14px + 2 * ((100vw - 320px) / 1600));
+  line-height: 19px;
+  color: #373737;
+  display: inline-block;
+  padding-top: 13px;
+  padding-bottom: 13px;
+  -webkit-box-flex: 1;
+      -ms-flex: 1 1 auto;
+          flex: 1 1 auto;
+}
+
+.content-present-item-4__select {
+  cursor: pointer;
+  width: 100%;
+  color: #959595;
+  padding: 10px 16px 0px 16px;
+  background: #F8F8F8;
+  -webkit-box-shadow: inset 0px 4px 4px rgba(149, 149, 149, 0.24);
+          box-shadow: inset 0px 4px 4px rgba(149, 149, 149, 0.24);
+  border-radius: 4px;
+}
+
+.content-present-item-4__select-title {
+  padding-bottom: 9px;
+  position: relative;
+}
+
+.content-present-item-4__select-title:after,
+.content-present-item-4__select-title:before {
+  content: '';
+  -webkit-transition: 0.3s;
+  -o-transition: 0.3s;
+  transition: 0.3s;
+  width: 10px;
+  height: 1px;
+  background-color: #C4C4C4;
+  position: absolute;
+  top: 11px;
+}
+
+.content-present-item-4__select-title:before {
+  right: 8px;
+  -webkit-transform: rotate(40deg);
+      -ms-transform: rotate(40deg);
+          transform: rotate(40deg);
+}
+
+.content-present-item-4__select-title:after {
+  right: 0;
+  -webkit-transform: rotate(-40deg);
+      -ms-transform: rotate(-40deg);
+          transform: rotate(-40deg);
+}
+
+.content-present-item-4__select-title.spoiler_active {
+  border-bottom: 0.5px solid #C4C4C4;
+}
+
+.select-item {
+  display: block;
+  margin-top: 10px;
+}
+
+.select-item:last-child {
+  padding-bottom: 10px;
+}
+
+.content-present-slide-5 {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+}
+
+.content-present-slide-5__img {
+  max-width: 100%;
+}
+
+.options_5 {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -ms-flex-pack: distribute;
+      justify-content: space-around;
+  margin: auto;
+}
+
+.options_5 .option {
+  display: block;
+  margin-bottom: 30px;
+}
+
+.options_5 .option:last-child {
+  padding-bottom: 0px;
+}
+
+.options_5 .option.active span {
+  border-bottom: 1px solid #B99C5D;
+}
+
+.present-end {
+  min-height: 600px;
+}
+
+.present-end__body {
+  position: relative;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+}
+
+.present-end__img {
+  -webkit-box-flex: 0;
+      -ms-flex: 0 1 33.333%;
+          flex: 0 1 33.333%;
+  max-height: 590px;
+}
+
+.present-end__img img {
+  max-width: 150%;
+}
+
+.present-end__info {
+  -webkit-box-flex: 0;
+      -ms-flex: 0 1 33.333%;
+          flex: 0 1 33.333%;
+}
+
+.present-end-info__top {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+}
+
+.present-end-info__title {
+  display: block;
+}
+
+.present-end-info__subtitle {
+  display: block;
+}
+
+.present-end-info__label {
+  display: block;
+}
+
+.present-end__right {
+  -webkit-box-flex: 0;
+      -ms-flex: 0 1 33.333%;
+          flex: 0 1 33.333%;
+}
+
+.item-right-present-end {
+  background: url("../img/presents/slide-end-right-bg.png") center/100% 100% no-repeat;
+  display: -webkit-box !important;
+  display: -ms-flexbox !important;
+  display: flex !important;
+}
+
 .hide {
   opacity: 0;
   visibility: hidden;
@@ -2612,6 +2851,10 @@ h6 {
   -o-transition: 1s;
   transition: 1s;
   position: relative;
+}
+
+.display_none {
+  display: none;
 }
 
 .err {
@@ -2664,6 +2907,25 @@ h6 {
           transform: rotate(40deg);
 }
 
+.content-present-item-4__select-title.spoiler_active:after,
+.content-present-item-4__select-title.spoiler_active:before {
+  -webkit-transition: 0.3s;
+  -o-transition: 0.3s;
+  transition: 0.3s;
+}
+
+.content-present-item-4__select-title.spoiler_active:before {
+  -webkit-transform: rotate(-40deg);
+      -ms-transform: rotate(-40deg);
+          transform: rotate(-40deg);
+}
+
+.content-present-item-4__select-title.spoiler_active:after {
+  -webkit-transform: rotate(40deg);
+      -ms-transform: rotate(40deg);
+          transform: rotate(40deg);
+}
+
 .scrollbar-thumb {
   background: #D9BD89 !important;
   width: 6px  !important;
@@ -2679,6 +2941,38 @@ h6 {
   right: 10px !important;
   top: 20px !important;
   height: 220px !important;
+}
+
+.content-price-form__range {
+  font-size: calc(14px + 2 * ((100vw - 320px) / 1600));
+  min-width: 200px;
+}
+
+.content-price-form__range-input {
+  max-width: 80px;
+  margin-right: 15px;
+  max-height: 42px;
+  margin-bottom: 0;
+}
+
+.range-label {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  margin-bottom: 20px;
+}
+
+.range-info {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  margin-bottom: 10px;
 }
 
 .content-price-form__range {
@@ -2759,12 +3053,6 @@ h6 {
 
   .content-steps-bottom__description {
     padding-bottom: 350px;
-  }
-
-  .present-start {
-    -webkit-box-align: center;
-        -ms-flex-align: center;
-            align-items: center;
   }
 
   .present-item-left {
@@ -2917,6 +3205,10 @@ h6 {
     -webkit-box-flex: 0;
         -ms-flex: 0 0 350px;
             flex: 0 0 350px;
+  }
+
+  .present-slide-3__img {
+    display: none;
   }
 }
 
@@ -3654,7 +3946,21 @@ h6 {
             flex-direction: column;
   }
 
+  .content-present_option.active span {
+    border-bottom: 1px solid #B99C5D;
+  }
+
   .content-present__img {
+    display: none;
+  }
+
+  .row_4 {
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+  }
+
+  .content-present-slide-5__img {
     display: none;
   }
 }
@@ -3702,6 +4008,8 @@ h6 {
 .webp .content-price-form__body:after { background: url(../img/price/letter1.webp) center/cover no-repeat; }
 
 .webp .present-item-right__body { background: url(../img/presents/bg-right.webp) center/100% 100% no-repeat; }
+
+.webp .item-right-present-end { background: url(../img/presents/slide-end-right-bg.webp) center/100% 100% no-repeat; }
 
 @media (max-width: 1140px) and (min-height: 1220px) {
 
