--- a/Interior Design/css/style.css
+++ b/Interior Design/css/style.css
@@ -926,7 +926,7 @@ h6 {
   color: #423A2A;
   font-weight: 300;
   padding: 20px 50px 25px 50px;
-  font-size: calc(9px + 5 * ((100vw - 320px) / 1600));
+  font-size: calc(12px + 2 * ((100vw - 320px) / 1600));
   line-height: 16px;
   display: inline-block;
   text-align: center;
@@ -2656,9 +2656,6 @@ h6 {
   display: inline-block;
   padding-top: 13px;
   padding-bottom: 13px;
-  -webkit-box-flex: 1;
-      -ms-flex: 1 1 auto;
-          flex: 1 1 auto;
 }
 
 .content-present-item-4__select {
@@ -2757,7 +2754,7 @@ h6 {
 }
 
 .present-end {
-  min-height: 600px;
+  display: none;
 }
 
 .present-end__body {
@@ -2775,13 +2772,16 @@ h6 {
 }
 
 .present-end__img img {
-  max-width: 150%;
+  max-width: 160%;
+  margin-left: -50%;
+  margin-top: -10%;
 }
 
 .present-end__info {
   -webkit-box-flex: 0;
-      -ms-flex: 0 1 33.333%;
-          flex: 0 1 33.333%;
+      -ms-flex: 0 1 38%;
+          flex: 0 1 38%;
+  margin: auto 20px;
 }
 
 .present-end-info__top {
@@ -2796,20 +2796,44 @@ h6 {
 
 .present-end-info__title {
   display: block;
+  font-size: calc(12px + 2 * ((100vw - 320px) / 1600));
+  padding-bottom: 30px;
 }
 
 .present-end-info__subtitle {
   display: block;
+  font-family: Philosopher;
+  line-height: 22px;
+  font-size: calc(16px + 4 * ((100vw - 320px) / 1600));
+  padding-bottom: 25px;
+}
+
+.present-end-info__radiobuttons {
+  -webkit-box-pack: start;
+      -ms-flex-pack: start;
+          justify-content: flex-start;
+  margin-bottom: 20px;
 }
 
 .present-end-info__label {
   display: block;
+  font-size: calc(10px + 2 * ((100vw - 320px) / 1600));
+  line-height: 14px;
+  padding-bottom: 15px;
+}
+
+.present-end-info__security {
+  padding-bottom: 35px;
+}
+
+.present-end-info__btn span {
+  font-size: 16px;
 }
 
 .present-end__right {
   -webkit-box-flex: 0;
-      -ms-flex: 0 1 33.333%;
-          flex: 0 1 33.333%;
+      -ms-flex: 0 1 390px;
+          flex: 0 1 390px;
 }
 
 .item-right-present-end {
@@ -2817,6 +2841,267 @@ h6 {
   display: -webkit-box !important;
   display: -ms-flexbox !important;
   display: flex !important;
+  height: 100%;
+  padding-bottom: 10px;
+}
+
+.item-right-present__hope .item-right-present__title {
+  color: #373737;
+  font-family: Philosopher;
+  font-size: 16px;
+  margin-bottom: 45px;
+}
+
+.item-right-present-end__text-1 {
+  margin: auto;
+}
+
+.present-end-right__footer {
+  max-width: 200px;
+  padding-left: 40px;
+}
+
+.present-end-right__PDF {
+  color: #8E8E8E;
+  display: block;
+  font-weight: 300;
+  font-size: 12px;
+  padding-bottom: 5px;
+}
+
+.present-end-right__text {
+  font-size: 14px;
+  line-height: 16px;
+  padding-bottom: 10px;
+  display: block;
+}
+
+.present-end-right__adobe-file {
+  color: #A38A54;
+  -webkit-text-decoration-line: underline;
+          text-decoration-line: underline;
+  font-weight: 300;
+  font-size: 12px;
+}
+
+.present-end-right__adobe-file img {
+  margin-right: 10px;
+}
+
+.step-slider {
+  background: #FCFCFC url("../img/slider-steps/slider-steps-bg.png") left/contain no-repeat;
+  padding-top: 50px;
+  padding-bottom: 50px;
+}
+
+.step-slider__item {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+}
+
+.slick-slider {
+  position: relative;
+  z-index: 3;
+}
+
+.slick-track,
+.slick-list {
+  position: relative;
+  overflow: hidden;
+  width: 100%;
+}
+
+.slick-track {
+  position: relative;
+  width: 100%;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: start;
+      -ms-flex-align: start;
+          align-items: flex-start;
+}
+
+.slick-slide {
+  position: relative;
+}
+
+.step-slider__btn-group {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+}
+
+.step-slider__btn-group .slick-arrow {
+  z-index: 10;
+  font-size: 0;
+  width: 30px;
+  height: 30px;
+  margin: 15px;
+}
+
+.step-slider__btn-group .step-slider__prev {
+  background: url("../img/slider-steps/next.svg") 0 0/100% no-repeat;
+  -webkit-transform: rotate(180deg);
+      -ms-transform: rotate(180deg);
+          transform: rotate(180deg);
+}
+
+.step-slider__btn-group .step-slider__next {
+  background: url("../img/slider-steps/next.svg") 0 0/100% no-repeat;
+}
+
+.step-slider__btn-group .slick-disabled {
+  opacity: 0.5;
+}
+
+.step-slider-controls__ul {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  width: 100%;
+}
+
+.step-slider-controls__li {
+  white-space: nowrap;
+  padding: 13px 43px;
+  border: 1px solid #D9BD89;
+  -webkit-box-sizing: border-box;
+          box-sizing: border-box;
+  border-radius: 60px;
+  margin-right: 20px;
+  cursor: pointer;
+  width: 100%;
+  text-align: center;
+  font-size: calc(10px + 8 * ((100vw - 320px) / 1600));
+}
+
+.step-slider-controls__li:last-child {
+  margin: 0px 0px 0px 0px;
+}
+
+.step-slider-controls__li_active {
+  background: -o-linear-gradient(171.56deg, #DAB171 -0.08%, #F3DEAD -0.07%, #F4E6CB 49.2%, #D9BD89 98.48%);
+  background: linear-gradient(278.44deg, #DAB171 -0.08%, #F3DEAD -0.07%, #F4E6CB 49.2%, #D9BD89 98.48%);
+}
+
+.step-slider__body {
+  position: relative;
+  color: #373737;
+}
+
+.step-slider__controls {
+  position: absolute;
+  z-index: 10;
+  left: 50%;
+  top: 5%;
+  padding-bottom: 25px;
+}
+
+.step-slider__item-bg_1 img {
+  left: 150px !important;
+}
+
+.step-slider__img {
+  -webkit-box-flex: 0;
+      -ms-flex: 0 1 50%;
+          flex: 0 1 50%;
+  position: relative;
+  z-index: 5;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+}
+
+.step-slider__img img {
+  max-width: 100%;
+}
+
+.step-slider__content {
+  -webkit-box-flex: 0;
+      -ms-flex: 0 1 50%;
+          flex: 0 1 50%;
+  position: relative;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  z-index: 5;
+  padding-top: 90px;
+}
+
+.step-slider-content__title {
+  font-weight: 500;
+  padding-bottom: 10px;
+  font-size: calc(22px + 4 * ((100vw - 320px) / 1600));
+}
+
+.step-slider-content__number {
+  font-size: calc(34px + 4 * ((100vw - 320px) / 1600));
+  padding-right: 5px;
+}
+
+.step-slider-content__subtitle {
+  font-weight: 500;
+  font-size: calc(16px + 2 * ((100vw - 320px) / 1600));
+  display: block;
+  padding-bottom: 25px;
+}
+
+.step-slider-content__ul {
+  padding-bottom: 25px;
+}
+
+.step-slider-content__li {
+  font-size: calc(14px + 2 * ((100vw - 320px) / 1600));
+  padding-bottom: 10px;
+}
+
+.step-slider-content__li:last-child {
+  padding-bottom: 0px;
+}
+
+.step-slider-content__li img {
+  padding-right: 5px;
+}
+
+.step-slider-content__text {
+  font-size: calc(14px + 2 * ((100vw - 320px) / 1600));
+  line-height: 19px;
+}
+
+.feedback-slider {
+  padding-top: 50px;
+  padding-bottom: 50px;
 }
 
 .hide {
@@ -3020,6 +3305,13 @@ h6 {
   }
 }
 
+@media (min-width: 1170px) {
+  .step-slider__img {
+    min-height: 345px;
+    min-width: 482px;
+  }
+}
+
 @media (min-width: 1199px) {
   .main-content-steps-top__bg:before {
     content: '';
@@ -3063,6 +3355,10 @@ h6 {
     -webkit-box-pack: center;
         -ms-flex-pack: center;
             justify-content: center;
+  }
+
+  .step-slider-controls__li {
+    padding: 13px 35px;
   }
 }
 
@@ -3209,6 +3505,37 @@ h6 {
 
   .present-slide-3__img {
     display: none;
+  }
+
+  .present-end__img {
+    -webkit-box-flex: 0;
+        -ms-flex: 0 1 50%;
+            flex: 0 1 50%;
+  }
+
+  .present-end__info {
+    -webkit-box-flex: 0;
+        -ms-flex: 0 1 50%;
+            flex: 0 1 50%;
+  }
+
+  .present-end__right {
+    display: none;
+  }
+
+  .step-slider {
+    background: #FCFCFC url("../img/slider-steps/slider-steps-bg.png") center/cover no-repeat;
+  }
+
+  .step-slider__controls {
+    position: relative;
+    left: 0;
+    top: 0;
+    max-width: 100%;
+  }
+
+  .step-slider__content {
+    padding-top: 0;
   }
 }
 
@@ -3390,6 +3717,16 @@ h6 {
   .present-item-right {
     display: none;
   }
+
+  .step-slider__btn-group {
+    display: none;
+  }
+
+  .step-slider__content {
+    -webkit-box-flex: 0;
+        -ms-flex: 0 1 70%;
+            flex: 0 1 70%;
+  }
 }
 
 @media (max-width: 768px) {
@@ -3535,6 +3872,15 @@ h6 {
 
   .content-price-form__body:after {
     display: none;
+  }
+
+  .presents-bg {
+    display: none;
+  }
+
+  .step-slider-controls__li {
+    padding: 10px 18px;
+    margin-right: 15px;
   }
 }
 
@@ -3954,14 +4300,62 @@ h6 {
     display: none;
   }
 
-  .row_4 {
-    -webkit-box-align: center;
-        -ms-flex-align: center;
-            align-items: center;
+  .content-present_item-4 {
+    padding-top: 15px;
+  }
+
+  .content-present-item-4__img {
+    display: none;
   }
 
   .content-present-slide-5__img {
     display: none;
+  }
+
+  .present-end__img {
+    display: none;
+  }
+
+  .present-end__info {
+    -webkit-box-flex: 0;
+        -ms-flex: 0 1 100%;
+            flex: 0 1 100%;
+    margin: 0;
+  }
+
+  .present-end-info__subtitle {
+    line-height: 16px;
+  }
+
+  .present-end-info__btn {
+    width: 100%;
+  }
+
+  .step-slider {
+    padding-top: 30px;
+    padding-bottom: 30px;
+  }
+
+  .step-slider__img {
+    display: none;
+  }
+
+  .step-slider__content {
+    -webkit-box-flex: 0;
+        -ms-flex: 0 1 100%;
+            flex: 0 1 100%;
+    -webkit-box-pack: start;
+        -ms-flex-pack: start;
+            justify-content: flex-start;
+  }
+
+  .step-slider-content__text {
+    line-height: 16px;
+  }
+
+  .feedback-slider {
+    padding-top: 30px;
+    padding-bottom: 30px;
   }
 }
 
@@ -4010,6 +4404,13 @@ h6 {
 .webp .present-item-right__body { background: url(../img/presents/bg-right.webp) center/100% 100% no-repeat; }
 
 .webp .item-right-present-end { background: url(../img/presents/slide-end-right-bg.webp) center/100% 100% no-repeat; }
+
+.webp .step-slider { background: #FCFCFC url(../img/slider-steps/slider-steps-bg.webp) left/contain no-repeat; }
+
+@media (max-width: 1170px) {
+
+  .webp .step-slider { background: #FCFCFC url(../img/slider-steps/slider-steps-bg.webp) center/cover no-repeat; }
+}
 
 @media (max-width: 1140px) and (min-height: 1220px) {
 
